--- a/craftana/src/main/resources/plugin.yml
+++ b/craftana/src/main/resources/plugin.yml
@@ -2,15 +2,12 @@ name: craftana
 main: io.github.ravidshachar.craftana.craftana
 version: 1.0
 commands:
-#    percent:
-#        description: This command showcases a certain percent on the leftmost upper clock
-#        usage: /percent [percent#]
-#    getmetric:
-#        description: This command prints cpu usage
-#        usage: /getmetric [query]
     setclock:
         description: This command creates sets a clock
         usage: /setclock [ColRow] [prom socketPair] [threshold] [query]
+    setgraph:
+        description: This command sets a graph
+        usage: /setgraph [ColRow] [prom socketPair] [step (seconds)] [threshold] [query]
     cleardashboard:
         description: This command clears the clock dashboard
         usage: /cleardashboard
