--- a/craftana/src/main/resources/plugin.yml
+++ b/craftana/src/main/resources/plugin.yml
@@ -11,4 +11,6 @@ commands:
     cleardashboard:
         description: This command clears the clock dashboard
         usage: /cleardashboard
-    
+    drawrect:
+        description: DEV ONLY draws a rect
+        usage: /drawrect [x1] [y1] [z1] [x2] [y2] [z2]
