--- a/craftana/pom.xml
+++ b/craftana/pom.xml
@@ -2,6 +2,10 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.github.ravidshachar</groupId>
   <artifactId>craftana</artifactId>
+  <properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<jetty.version>8.1.12.v20130726</jetty.version>
+  </properties>
   <version>0.0.1</version>
     <build>
       <plugins>
@@ -46,7 +50,7 @@
     	</repository>
 	</repositories>
     <dependencies>
-    <!--This adds the Spigot API artifact to the build -->
+    	<!--This adds the Spigot API artifact to the build -->
     	<dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
@@ -59,5 +63,41 @@
 	    	<artifactId>json</artifactId>
 	    	<version>20200518</version>
 		</dependency>
+		<!-- The prometheus client -->
+		<dependency>
+  			<groupId>io.prometheus</groupId>
+  			<artifactId>simpleclient</artifactId>
+  			<version>0.9.0</version>
+		</dependency>
+		<!-- Exposition HTTPServer for prometheus-->
+		<dependency>
+  			<groupId>io.prometheus</groupId>
+  			<artifactId>simpleclient_httpserver</artifactId>
+  			<version>0.9.0</version>
+		</dependency>
+		<!-- Exposition HTTPServer for hotspot-->
+		<dependency>
+  			<groupId>io.prometheus</groupId>
+  			<artifactId>simpleclient_hotspot</artifactId>
+  			<version>0.9.0</version>
+		</dependency>
+		<!-- Exposition HTTPServer for prometheus-->
+		<dependency>
+  			<groupId>io.prometheus</groupId>
+  			<artifactId>simpleclient_servlet</artifactId>
+  			<version>0.9.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-webapp</artifactId>
+			<version>${jetty.version}</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/javax.servlet/servlet-api ->
+		<dependency>
+    		<groupId>javax.servlet</groupId>
+    		<artifactId>servlet-api</artifactId>
+    		<version>2.5</version>
+    		<scope>provided</scope>
+		</dependency>-->
 	</dependencies>
 </project>
