--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,7 +62,7 @@ services:
       mode: global
 
   craftana:
-    image: craftana:0.0.1
+    image: ravidshachar/craftana:0.1.0
     ports:
       - 25565:25565
       - 25566:25566
