--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,3 +39,6 @@ test-job:   # This job runs in the test stage.
   stage: test    # It only starts when the job in the build stage completes successfully.
   script:
     - echo "Placeholder"
+
+include:
+  - template: Security/SAST.gitlab-ci.yml
