--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,9 @@
 
 image: docker:latest
 
+include:
+  - template: Security/SAST.gitlab-ci.yml
+
 stages:          # List of stages for jobs, and their order of execution
   - build
   - test
@@ -35,10 +38,8 @@ build-job:       # This job runs in the build stage, which runs first.
     - docker build --pull -t "$CI_REGISTRY_IMAGE${tag}" .
     - docker push "$CI_REGISTRY_IMAGE${tag}"
 
-test-job:   # This job runs in the test stage.
-  stage: test    # It only starts when the job in the build stage completes successfully.
-  script:
-    - echo "Placeholder"
-
-include:
-  - template: Security/SAST.gitlab-ci.yml
+sast:
+  artifacts:
+    paths: [gl-sast-report.json]
+    reports:
+      sast: gl-sast-report.json
