--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,14 +1,3 @@
-# This file is a template, and might need editing before it works on your project.
-# To contribute improvements to CI/CD templates, please follow the Development guide at:
-# https://docs.gitlab.com/ee/development/cicd/templates.html
-# This specific template is located at:
-# https://gitlab.com/gitlab-org/gitlab/-/blob/master/lib/gitlab/ci/templates/Getting-Started.gitlab-ci.yml
-#
-# A pipeline is composed of independent jobs that run scripts, grouped into stages.
-# Stages run in sequential order, but jobs within stages run in parallel.
-#
-# For more information, see: https://docs.gitlab.com/ee/ci/yaml/README.html#stages
-
 image: docker:latest
 
 include:
@@ -21,11 +10,10 @@ stages:          # List of stages for jobs, and their order of execution
 services:
   - docker:dind
 
-before_script:
-  - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
-
 build-job:       # This job runs in the build stage, which runs first.
   stage: build
+  before_script:
+    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
   script:
     - |
       if [[ "$CI_COMMIT_BRANCH" == "$CI_DEFAULT_BRANCH" ]]; then
@@ -35,11 +23,22 @@ build-job:       # This job runs in the build stage, which runs first.
         tag=":$CI_COMMIT_REF_SLUG"
         echo "Running on branch '$CI_COMMIT_BRANCH': tag = $tag"
       fi
+    - echo "CRAFTANA_TAG=${tag}" > build.env
     - docker build --pull -t "$CI_REGISTRY_IMAGE${tag}" .
     - docker push "$CI_REGISTRY_IMAGE${tag}"
-
-sast:
   artifacts:
-    paths: [gl-sast-report.json]
     reports:
-      sast: gl-sast-report.json
+      dotenv: build.env
+
+integration-test:
+  stage: test
+  image: python:3.9
+  services:
+    - name: $CI_REGISTRY_IMAGE${CRAFTANA_TAG}
+      alias: craftana
+  script:
+    - pip install --upgrade pip
+    - pip install requests
+    - python integration_test.py craftana 300
+  dependencies:
+    - build-job
