--- a/craftana/pom.xml
+++ b/craftana/pom.xml
@@ -5,6 +5,7 @@
   <properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<jetty.version>8.1.12.v20130726</jetty.version>
+		<mc.version>1.17.1</mc.version>
   </properties>
   <version>0.0.1</version>
     <build>
@@ -54,7 +55,7 @@
     	<dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
-           <version>1.16.3-R0.1-SNAPSHOT</version>
+	   <version>${mc.version}-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
     	</dependency>
     	<!-- https://mvnrepository.com/artifact/org.json/json -->
